--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-7 banner-bottom-grid wow flipInY" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<div class="banner-bottom-grid1">
 					<!--	<img src="images/pic11.jpg" alt=" " class="img-responsive" />-->
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/AUbzZvQZ43E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						<div class="banner-bottom-grid-pos">
+						 <iframe width="350" height="315" src="https://www.youtube.com/embed/AUbzZvQZ43E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="banner-bottom-grid-pos">
 						<!--	<div class="progress">
 							  <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
 								<span class="sr-only">30% Complete</span>
@@ -202,11 +202,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="banner-bottom-grids">
 				<div class="col-md-6 banner-bottom-grid-1 wow flipInY" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<div class="banner-bottom-grid-11">
-					<!--	<img src="images/pic12.jpg" alt=" " class="img-responsive" />-->
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/uiUj-JSbIRY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						<div class="banner-bottom-grid-11-pos">
-							<p>Neyyar Fishes , Meenankal, Trivandrum</p>
-							<div class="more m1">
+					     <!--	<img src="images/pic12.jpg" alt=" " class="img-responsive" />-->
+						    <iframe width="350" height="315" src="https://www.youtube.com/embed/uiUj-JSbIRY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					        <iframe width="350" height="315" src="https://www.youtube.com/embed/IKv8q-lZhUg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						    <iframe width="350" height="315" src="https://www.youtube.com/embed/b5Ujg8u4ts0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>
+					<!--<div class="banner-bottom-grid-11-pos">
+							
+				    <div class="more m1">-->
 								<!--<a href="single.html" class="hvr-curl-bottom-right">Read More</a>-->
 							</div>
 						</div>
