--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   
 					<div class="logo">
 						    <img  id="lgo" src="images/logo.jpg"/>
-						<a class="navbar-brand" href="index.html">Neyyar Fishes</a>
+						<a class="navbar-brand" href="index.html">Neyyar </a><p>Fishes</p>
 					</div>
 				</div>
 
