--- a/mail.html
+++ b/mail.html
@@ -88,7 +88,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-md-4 contact-left wow fadeInLeftBig" data-wow-duration="1000ms" data-wow-delay="300ms">
 				<h4>Address</h4>
-				<h2>Meenankal , Trivandrum
+				<h2>Neyyar Fishes ,Meenankal , Trivandrum
 					<span>Kerala</span></h2>
 				<ul>
 					<li>Phone :+91 9446126904</li>
