--- a/services.html
+++ b/services.html
@@ -77,7 +77,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 <!-- header -->
-
+ 
+		<h2 >Delivery Upto 15km is free</h1>
+		
+		
 <!-- services 
 	<div class="services">
 		<div class="container">
@@ -89,7 +92,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="service-grd-pos">
 							<h4>eum fugiat quo nulla</h4>
 							<div class="more m2">
-							<!--	<a href="single.html" class="hvr-curl-bottom-right">Read More</a>
+								<a href="single.html" class="hvr-curl-bottom-right">Read More</a>
 							</div>
 						</div>
 						<div class="service-grd-pos2">
@@ -103,7 +106,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="service-grd-pos">
 							<h4>eum fugiat quo nulla</h4>
 							<div class="more m2">
-								<!--<a href="single.html" class="hvr-curl-bottom-right">Read More</a>
+								<a href="single.html" class="hvr-curl-bottom-right">Read More</a>
 							</div>
 						</div>
 						<div class="service-grd-pos2">
@@ -117,7 +120,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="service-grd-pos">
 							<h4>eum fugiat quo nulla</h4>
 							<div class="more m2">
-							<!--	<a href="single.html" class="hvr-curl-bottom-right">Read More</a>
+								<a href="single.html" class="hvr-curl-bottom-right">Read More</a>
 							</div>
 						</div>
 						<div class="service-grd-pos2">
@@ -134,7 +137,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="service-grd-pos">
 							<h4>eum fugiat quo nulla</h4>
 							<div class="more m2">
-							<!--	<a href="single.html" class="hvr-curl-bottom-right">Read More</a>
+								<a href="single.html" class="hvr-curl-bottom-right">Read More</a>
 							</div>
 						</div>
 						<div class="service-grd-pos2">
@@ -148,7 +151,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="service-grd-pos">
 							<h4>eum fugiat quo nulla</h4>
 							<div class="more m2">
-								<!--<a href="single.html" class="hvr-curl-bottom-right">Read More</a>
+								<a href="single.html" class="hvr-curl-bottom-right">Read More</a>
 							</div>
 						</div>
 						<div class="service-grd-pos2">
@@ -162,7 +165,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="service-grd-pos">
 							<h4>eum fugiat quo nulla</h4>
 							<div class="more m2">
-							<!--	<a href="single.html" class="hvr-curl-bottom-right">Read More</a>
+								<a href="single.html" class="hvr-curl-bottom-right">Read More</a>
 							</div>
 						</div>
 						<div class="service-grd-pos2">
@@ -172,7 +175,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="clearfix"> </div>
 			</div>
-			<!--<div class="services-grids">
+			<div class="services-grids">
 				<h2 class="animated fadeInLeftBig" data-wow-duration="1000ms" data-wow-delay="300ms">Offered Services</h2>
 				<div class="col-md-4 services-grid wow flipInY" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<div class="col-xs-2 services-grid-left">
@@ -238,12 +241,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#">Fugiat nulla pariatur</a></li>
 						<li><a href="#">Annoying consequences</a></li>
 						<li><a href="#">Trivial example</a></li>
-					</ul>-->
+					</ul>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 <!-- //services -->
 <!-- footer -->
 <div class="footer">
