--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a href="index.html" class="active">Home</a></li>
 							<li><a href="short-codes.html">About us</a></li>
 							<li><a href="events.html">Gallery</a></li>
-							<li role="presentation" class="dropdown">
+							<li><a href="services.html">Services</a></li>
+							<!--<li role="presentation" class="dropdown">
 								<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-								  Services <span class="caret"></span>
+								  Video <span class="caret"></span>
 								</a>
-								<!--<ul class="dropdown-menu">
+								<ul class="dropdown-menu">
 								  <li><a href="services.html">Door Delivery</a></li>
 								  <li><a href="services.html">Direct Delivery</a></li>
-								</ul>-->
-							</li>
+								</ul>
+							</li>-->
 							<li><a href="mail.html">Contact Us</a></li>
 						</ul>
 					</nav>
@@ -177,7 +178,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-7 banner-bottom-grid wow flipInY" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<div class="banner-bottom-grid1">
 					<!--	<img src="images/pic11.jpg" alt=" " class="img-responsive" />-->
-						 <iframe width="330" height="315" src="https://www.youtube.com/embed/AUbzZvQZ43E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						 <iframe width="500" height="315" src="https://www.youtube.com/embed/AUbzZvQZ43E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<div class="banner-bottom-grid-pos">
 						<!--	<div class="progress">
 							  <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
@@ -203,10 +204,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-6 banner-bottom-grid-1 wow flipInY" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<div class="banner-bottom-grid-11">
 					     <!--	<img src="images/pic12.jpg" alt=" " class="img-responsive" />-->
-						    <iframe width="330" height="315" src="https://www.youtube.com/embed/uiUj-JSbIRY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					        <iframe width="330" height="315" src="https://www.youtube.com/embed/IKv8q-lZhUg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						    <iframe width="330" height="315" src="https://www.youtube.com/embed/b5Ujg8u4ts0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						    <iframe width="500" height="315" src="https://www.youtube.com/embed/uiUj-JSbIRY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					        <iframe width="500" height="315" src="https://www.youtube.com/embed/IKv8q-lZhUg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						    <iframe width="500" height="315" src="https://www.youtube.com/embed/b5Ujg8u4ts0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						    <iframe width="500" height="315" src="https://www.youtube.com/embed/xNPw7LttPMI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						    <iframe width="500" height="315" src="https://www.youtube.com/embed/9LVeqKnc_fQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						    <iframe width="500" height="315" src="https://www.youtube.com/embed/BjtCQiVFjJg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						    <iframe width="500" height="315" src="https://www.youtube.com/embed/Wwf2dcFCVIs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						    <iframe width="500" height="315" src="https://www.youtube.com/embed/V7m0udTLgFA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						    <iframe width="500" height="315" src="https://www.youtube.com/embed/bmm1l8Plxwo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="500" height="315" src="https://www.youtube.com/embed/NM63HI9ltCI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="500" height="315" src="https://www.youtube.com/embed/FGhYa19l8jM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
+						<div class="banner-bottom-grid-11">
+							<!--	<img src="images/pic12.jpg" alt=" " class="img-responsive" />-->
+							
+							    </div>
 					<!--<div class="banner-bottom-grid-11-pos">
 							
 				    <div class="more m1">-->
