--- a/events2.html
+++ b/events2.html
@@ -86,25 +86,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="main-list">
 				<div class="span4">
 					<div class="css3gallery">
-						<img src="images/pic1.jpg" alt="fotograph" title="" />
+						<img src="images/pic14.jpg" alt="fotograph" title="" />
 					</div>
 				<div class="clear"></div>
 				</div>
 				<div class="span4">
 					<div class="css3gallery">
-						<img src="images/pic2.jpg"  alt="fotograph" title="" />
+						<img src="images/pic15.jpg"  alt="fotograph" title="" />
 					</div>
 				<div class="clear"></div>
 				</div>
 				<div class="span4">
 					<div class="css3gallery">
-						<img src="images/2.jpg"  alt="fotograph" title="" />
+						<img src="images/pic16.jpg"  alt="fotograph" title="" />
 					</div>
 				<div class="clear"></div>
 				</div>
 				<div class="span4">
 					<div class="css3gallery">
-						<img src="images/pic4.jpg"  alt="fotograph" title="" />
+						<img src="images/pic17.jpg"  alt="fotograph" title="" />
 					</div>
 				<div class="clear"></div>
 				</div>
@@ -114,25 +114,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="main-list1">
 				<div class="span4">
 					<div class="css3gallery">
-						<img src="images/pic5.jpg" alt="fotograph" title="" />
+                        <img src="images/pic18.jpg" alt="fotograph" title="" />
 					</div>
 				<div class="clear"></div>
 				</div>
 				<div class="span4">
 					<div class="css3gallery">
-						<img src="images/pic13.jpg"  alt="fotograph" title="" />
+						<img src="images/pic19.jpg"  alt="fotograph" title="" />
 					</div>
 				<div class="clear"></div>
 				</div>
 				<div class="span4">
 					<div class="css3gallery">
-						<img src="images/pic7.jpg"  alt="fotograph" title="" />
+						<img src="images/pic20.jpg"  alt="fotograph" title="" />
 					</div>
 				<div class="clear"></div>
 				</div>
 				<div class="span4">
 					<div class="css3gallery">
-						<img src="images/pic8.jpg"  alt="fotograph" title="" />
+						<img src="images/pic21.jpg"  alt="fotograph" title="" />
 					</div>
 				<div class="clear"></div>
 				</div>
@@ -142,25 +142,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	 <div class="main-list1">
 		<div class="span4">
 			<div class="css3gallery">
-				<img src="images/pic9.jpg" alt="fotograph" title="" />
+				<img src="images/pic30.jpg" alt="fotograph" title="" />
 			</div>
 		<div class="clear"></div>
 		</div>
 		<div class="span4">
 			<div class="css3gallery">
-				<img src="images/pic10.jpg"  alt="fotograph" title="" />
+				<img src="images/pic23.jpg"  alt="fotograph" title="" />
 			</div>
 		<div class="clear"></div>
 		</div>
 		<div class="span4">
 			<div class="css3gallery">
-				<img src="images/pic11.jpg"  alt="fotograph" title="" />
+				<img src="images/pic29.jpg"  alt="fotograph" title="" />
 			</div>
 		<div class="clear"></div>
 		</div>
 		<div class="span4">
 			<div class="css3gallery">
-				<img src="images/pic12.jpg"  alt="fotograph" title="" />
+				<img src="images/pic28.jpg"  alt="fotograph" title="" />
 			</div>
 		<div class="clear"></div>
 		</div>
@@ -169,7 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="clear"></div>
 	<div class="pagination">
 	  <ul>
-		<li><a href="#">Prev</a></li>
+		<li><a href="events.html">Prev</a></li>
 		<li><a href="events.html">1</a></li>
 		<li><a href="events2.html">2</a></li>
 		<li><a href="#">3</a></li>
