--- a/services.html
+++ b/services.html
@@ -51,15 +51,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a href="index.html">Home</a></li>
 							<li><a href="short-codes.html">About us</a></li>
 							<li><a href="events.html">Gallery</a></li>
-							<li role="presentation" class="dropdown">
+							<li><a class="active" href="services.html">Services</a></li>
+							 <!-- <li role="presentation" class="dropdown">
 								<a class="dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
 								  Services <span class="caret"></span>
 								</a>
 								<ul class="dropdown-menu">
 								  <li><a href="services.html">Door Delivery</a></li>
-								 <!-- <li><a href="services.html"> At </a></li>-->
+								  <li><a href="services.html"> At </a></li>
 								</ul>
-							</li>
+							</li>-->
 							<li><a href="mail.html">Contact Us</a></li>
 						</ul>
 					</nav>
