--- a/short-codes.html
+++ b/short-codes.html
@@ -51,15 +51,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a href="index.html">Home</a></li>
 							<li><a href="short-codes.html" class="active">About us</a></li>
 							<li><a href="events.html">Gallery</a></li>
-							<li role="presentation" class="dropdown">
+							<li><a href="services.html">Services</a></li>
+							<!--<li role="presentation" class="dropdown">
 								<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-								  Services <span class="caret"></span>
+									Video <span class="caret"></span>
 								</a>
 								<ul class="dropdown-menu">
 								  <li><a href="services.html">Door Delivery</a></li>
 								  <li><a href="services.html">Direct Delivery</a></li>
 								</ul>
-							</li>
+							</li>-->
 							<li><a href="mail.html">Contact Us</a></li>
 						</ul>
 					</nav>
