--- a/services.html
+++ b/services.html
@@ -66,10 +66,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</nav>
 					<div class="social-icons">
 						<ul>
-							<li><a class="icon-link round facebook" href="#"></a></li>
+							<!--<li><a class="icon-link round facebook" href="#"></a></li>
 							<li><a class="icon-link round p" href="#"></a></li>
 							<li><a class="icon-link round twitter" href="#"></a></li>
-							<li><a class="icon-link round dribble" href="#"></a></li>
+							<li><a class="icon-link round dribble" href="#"></a></li>-->
+							<li><a href="https://wa.me/!!!+919446126904!!!?text=Hi%20Eric,%20I%20am%20sending%20you%20this%20message%20because%20I%20am%20interested%20in%20your%20business!" style="text-decoration: none;" target="_blank">
+								<img src="https://i.ibb.co/N9P0K9H/239px-Whats-App-svg.png" width="50" height="50"/>
+						   </a>
+						   
+						   <a href="https://wa.me/!!!+919446126904!!!?text=Hi%20Eric,%20I%20am%20sending%20you%20this%20message%20because%20I%20am%20interested%20in%20your%20business!" target="_blank">
+							Whatsapp us
+						   </a></li>
 						</ul>
 					</div>
 				</div>
