--- a/mail.html
+++ b/mail.html
@@ -71,12 +71,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a class="icon-link round p" href="#"></a></li>
 							<li><a class="icon-link round twitter" href="#"></a></li>
 							<li><a class="icon-link round dribble" href="#"></a></li>-->
-							<li><a href="https://wa.me/!!!+919446126904!!!?text=Hi%20Eric,%20I%20am%20sending%20you%20this%20message%20because%20I%20am%20interested%20in%20your%20business!" style="text-decoration: none;" target="_blank">
+							<li><a href="https://wa.me/!!!+919446126904!!!" style="text-decoration: none;" target="_blank">
 								<img src="https://i.ibb.co/N9P0K9H/239px-Whats-App-svg.png" width="50" height="50"/>
 						   </a>
 						   
-						   <a href="https://wa.me/!!!+919446126904!!!?text=Hi%20Eric,%20I%20am%20sending%20you%20this%20message%20because%20I%20am%20interested%20in%20your%20business!" target="_blank">
-							Whatsapp us
+						   <a href="https://wa.me/!!!+919446126904!!!" target="_blank">
+							Whatsapp 
 						   </a></li>
 						</ul>
 					</div>
