--- a/events.html
+++ b/events.html
@@ -77,7 +77,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						   </a>
 						   
 						   <a href="https://wa.me/!!!+919446126904!!!" target="_blank">
-							Whatsapp 
+							 
 						   </a></li>
 						</ul>
 					</div>
@@ -176,13 +176,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="clear"></div>
 	<div class="pagination">
 	  <ul>
-		<li><a href="#">Prev</a></li>
+		<!--<li><a href="#">Prev</a></li>-->
 		<li><a href="events.html">1</a></li>
 		<li><a href="events2.html">2</a></li>
 		<li><a href="#">3</a></li>
 		<li><a href="#">4</a></li>
 		<li><a href="#">5</a></li>
-		<li><a href="#">Next</a></li>
+		<li><a href="events2.html">Next</a></li>
 	  </ul>
 	</div>
 	<div class="clear"></div>
@@ -246,7 +246,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- for bootstrap working -->
 	<script src="js/bootstrap.js"></script>
 <!-- //for bootstrap working -->
-<!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script
 <script type="text/javascript">
 	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 	(function(){
@@ -258,6 +258,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	s0.parentNode.insertBefore(s1,s0);
 	})();
 	</script>
-	<!--End of Tawk.to Script-->
+	End of Tawk.to Script-->
 </body>
 </html>
