--- a/services.html
+++ b/services.html
@@ -75,7 +75,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						   </a>
 						   
 						   <a href="https://wa.me/!!!+919446126904!!!" target="_blank">
-							Whatsapp 
+							
 						   </a></li>
 						</ul>
 					</div>
@@ -310,7 +310,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- for bootstrap working -->
 	<script src="js/bootstrap.js"></script>
 <!-- //for bootstrap working -->
-<!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script
 <script type="text/javascript">
 	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 	(function(){
@@ -322,6 +322,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	s0.parentNode.insertBefore(s1,s0);
 	})();
 	</script>
-	<!--End of Tawk.to Script-->
+	-End of Tawk.to Script-->
 </body>
 </html>
